--- a/Aljeida.VisualStudio.YUML/Aljeida.VisualStudio.YUML.csproj
+++ b/Aljeida.VisualStudio.YUML/Aljeida.VisualStudio.YUML.csproj
@@ -169,6 +169,9 @@
   <PropertyGroup>
     <UseCodebase>true</UseCodebase>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v10.0\VSSDK\Microsoft.VsSDK.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
