git-svn-id: https://xp-dev.com/svn/Aljeida/VisualStudio/trunk@291 49c91ae9-daf9-4d1e-a41c-d812ebaead29

--- a/Aljeida.VisualStudio.YUML/Aljeida.VisualStudio.YUML.csproj
+++ b/Aljeida.VisualStudio.YUML/Aljeida.VisualStudio.YUML.csproj
@@ -151,13 +151,20 @@
   <ItemGroup>
     <Content Include="icon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="snapshot1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Content Include="yUML_square.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Resource Include="yUML_small.png" />
     <Resource Include="Resources\Images_32bit.png" />
     <Content Include="Resources\Package.ico" />
     <Content Include="snapshot.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
   </ItemGroup>
   <ItemGroup>
