--- a/Aljeida.VisualStudio.YUML/Aljeida.VisualStudio.YUML_IntegrationTests/Aljeida.VisualStudio.YUML_IntegrationTests.csproj
+++ b/Aljeida.VisualStudio.YUML/Aljeida.VisualStudio.YUML_IntegrationTests/Aljeida.VisualStudio.YUML_IntegrationTests.csproj
@@ -36,6 +36,15 @@
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug2012|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\Debug2012\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="envdte" />
     <Reference Include="envdte80" />
